# ouroboros

./: .gitignore  README.md  environment.yml  pyproject.toml  test.py  vision.py
core/: aggregator.py  config.py  datasets.py  lifecycle.py  models.py  process.py  steps.py  utils.py
