[tool.poetry]
name = "ouroboros"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
test-tube = "^0.7.5"
lightning-bolts = "^0.3.1"
torchvision = "^0.9.0"
matplotlib = "^3.3.4"
scikit-learn = "^0.24.1"
wandb = "^0.10.22"
opencv-python = "^4.5.1"
pillow-simd = "^7.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
