[tool.poetry]
name = "ouroboros"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.9.1"
Pillow-SIMD = "^7.0.0"
torchvision = "^0.10.1"
tqdm = "^4.64.1"
torchmetrics = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
